--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
       <div class="start-help1">                         
 <h4 class="section-title" style="color: black;"><b>Witamy serdecznie</b></h4>
 <div id="ramka-start">
-<h5>W naszym portalu <span class="tuba">porównujemy usługi</span> biorąc pod uwagę <span span class="tuba">ich cenę</span> oraz najważniejsze <span class="tuba">parametry jakościowe</span>.</h5>
+<h5>W naszej aplikacji <span class="tuba">porównujemy usługi</span> biorąc pod uwagę <span span class="tuba">ich cenę</span> oraz najważniejsze <span class="tuba">parametry jakościowe</span>.</h5>
 <h5>Do prezentacji usług oraz budowy profili biznesowych usługodawców wykorzystujemy <span span class="tuba">publicznie dostępne informacje</span>.</h5>
-<h5>Użytkownicy portalu, w prosty i szybki sposób, mogą znaleźć <span class="tuba">usługi dopasowane do indywidualnych preferencji Klienta</span>.</h5>
+<h5>Użytkownicy aplikacji, w prosty i szybki sposób, mogą znaleźć <span class="tuba">usługi dopasowane do indywidualnych preferencji Klienta</span>.</h5>
 <h5>Naszym celem jest rozwój takiego model biznesu, w którym <span span class="tuba">jesteśmy pełnomocnikiem Klienta</span>.</h5>
 <h5>Zapraszamy do założenia profilu użytkownika. Prosimy o przesyłanie sugestii jakie usługi powinniśmy analizować w przyszłości.</h5>	
  <a href="login.html" class="logowanie-start"><b>Dołącz do nas</b></a>
